Fix: video anim flickering

--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -23,12 +23,8 @@
 
 .videoActive {
     height: 100% !important;
-    top: 0 !important;
+    top: 6% !important;
     width: 500px !important;
     left: calc(50% - 250px) !important;
     z-index: 99;
-}
-
-.videoActive video {
-    top: 4% !important;
 }
